added kube files